# AginxBrain

./: .gitignore  AGINXBRAIN_MULTIMODAL_SPEC.md  ARTICLE.md  AUDIT.md  BRAIN_MULTIMODAL_ARCHITECTURE.md  CLAUDE.md  COMPARISON.md  GITHUB_RESEARCH.md  LICENSE  MULTIMODAL_USAGE.md  OPENCARRIER_STREAMING_SPEC.md  README.md  ROADMAP.md  aginxbrain.service  article.html  brain.aginx.net.nginx  config.example.yaml
.github/workflows/: build.yml  release.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_request_model.sql  003_add_caller_token_plain.sql  004_add_usage_task_id.sql
src-tauri/src/: api.rs  axum_server.rs  config.rs  dashscope_ws.rs  db.rs  lib.rs  main.rs  models.rs  proxy.rs  smart_routing.rs  takeover.rs  tray.rs
src-tauri/src/convert/: mod.rs  requests.rs  responses.rs  streaming.rs
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web-client/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web-client/src/: App.tsx  index.css
web/src/: App.tsx  index.css
web/src/components/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  StatusDot.tsx  UsageGuide.tsx
web/src/lib/: api.ts  updater.ts
web/src/pages/: ApiKeysPage.tsx  DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  LogsPage.tsx  ProvidersPage.tsx  RoutesPage.tsx  TagsPage.tsx  UsagePage.tsx
