[package]
name = "aginxbrain"
version = "0.2.5"
edition = "2021"

[lib]
name = "aginxbrain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Existing dependencies
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"
http-body-util = "0.1"
dirs = "6"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# Database + auth
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
argon2 = "0.5"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
rand = "0.8"
time = "0.3"
sha2 = "0.10"
hex = "0.4"

# Tauri dependencies
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
