[package]
name = "aginxbrain"
version = "0.3.0"
edition = "2021"

[lib]
name = "aginxbrain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Existing dependencies
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls", "multipart"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tower-http = { version = "0.6", features = ["cors", "fs", "limit", "compression-gzip"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"
http-body-util = "0.1"
dirs = "6"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# Database + auth
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
argon2 = "0.5"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
rand = "0.8"
time = "0.3"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["v4"] }
notify = { version = "7", features = ["macos_kqueue"] }

# Tauri dependencies (desktop only)
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-plugin-updater", "dep:tauri-plugin-process", "dep:tauri-build"]
server = []
